@@ -184,6 +184,8 @@ openbook_SOURCES = \
 	ofa-ledger-treeview.c								\
 	ofa-ledger-treeview.h								\
 	ofa-main-window.c									\
+	ofa-main-window.h									\
+	ofa-main-window-def.h								\
 	ofa-nomodal-page.c									\
 	ofa-nomodal-page.h									\
 	ofa-ope-template-page.c								\
