@@ -45,11 +45,11 @@
 
 #include "core/ofa-admin-credentials-bin.h"
 #include "core/ofa-dbms-root-bin.h"
-#include "core/ofa-main-window.h"
 
 #include "ui/ofa-application.h"
 #include "ui/ofa-dossier-new.h"
 #include "ui/ofa-dossier-new-bin.h"
+#include "ui/ofa-main-window.h"
 
 /* private instance data
  */
