@@ -52,10 +52,10 @@
 #include "core/ofa-open-prefs-bin.h"
 #include "core/ofa-currency-combo.h"
 #include "core/ofa-ledger-combo.h"
-#include "core/ofa-main-window.h"
 
 #include "ui/ofa-closing-parms-bin.h"
 #include "ui/ofa-dossier-properties.h"
+#include "ui/ofa-main-window.h"
 
 /* private instance data
  */
