@@ -56,7 +56,6 @@
 
 #include "core/ofa-dbms-root-bin.h"
 #include "core/ofa-iconcil.h"
-#include "core/ofa-main-window.h"
 
 #include "ui/ofa-application.h"
 #include "ui/ofa-balance-grid-bin.h"
@@ -64,6 +63,7 @@
 #include "ui/ofa-check-integrity-bin.h"
 #include "ui/ofa-closing-parms-bin.h"
 #include "ui/ofa-exercice-close-assistant.h"
+#include "ui/ofa-main-window.h"
 
 /* private instance data
  */
